fix: [CET-1402]: Fix overflow of icons in project list view (#16113)
* fix: [CET-1402]: Fix overflow of icons in
project list view

* fix: [CET-1402]: Update snapshots

* fix: [CET-1402]: Replace inline styling

--- a/src/modules/45-projects-orgs/pages/projects/views/ProjectListView/ProjectListView.module.scss
+++ b/src/modules/45-projects-orgs/pages/projects/views/ProjectListView/ProjectListView.module.scss
@@ -33,3 +33,7 @@
 .org {
   max-width: 150px;
 }
+
+.moduleListContainer {
+  overflow: hidden;
+}
